--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "requirejs": "~2.1.10",
     "should": "~3.1.2",
     "grunt": "~0.4.2",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-simple-mocha": "~0.4.0",
